# chess

./: .gitignore  Doc1.docx  NEA.docx  README.md  design.fig  flowchart.drawio  ~$NEA.docx
chess_engine/: Cargo.toml
chess_engine/src/: attacks.rs  board.rs  bootstrap.rs  bot.rs  game.rs  lib.rs  moves.rs  pieces.rs  square.rs  state.rs  tree.rs
chess_engine/src/pieces/: mod.rs  piece.rs
client/: package.json
client/src/: App.tsx  index.css  main.tsx
client/src/components/: index.ts
client/src/components/board/: board.css  board.tsx
client/src/components/chatbox/: chatbox.css  chatbox.tsx
client/src/components/header/: header.css  header.tsx
client/src/pages/: index.ts
client/src/pages/game/: game.css  game.tsx
client/src/pages/login/: login.tsx
client/src/pages/signup/: signup.tsx
server/: Cargo.toml
server/migrations/: 20250215184356_init_schema.sql  20250216122417_challenges.sql  20250216123637_friend_requests.sql  20250216123934_status.sql  20250216124415_expired.sql  20250216153303_sessions.sql  20250216200557_fuzzy.sql  20250217131932_friend_default.sql  20250217132617_friend_copies.sql
server/src/: auth.rs  error.rs  friends.rs  game.rs  main.rs  player.rs
