[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws" , "json" , "macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header" , "cookie"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chess_engine = { path = "../chess_engine" }
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4" , "serde"] }
serde = {version = "1.0.216" , features = ["derive"]}
serde_json = "1.0.133"
sqlx = {version = "0.8.3" , features = ["uuid" , "postgres" , "runtime-tokio"]}
anyhow = "1.0.95"
bcrypt = "0.17.0"
validator = {version = "0.19.0" , features = ["derive"]}
thiserror = "2.0.11"
